tests/paczka1/fuzzy1/75081261.err
Error in line 2: OZQlAdp51B S210 28,2
Error in line 4: OZQlAdp51B S786 20,4
Error in line 19: rZMaJhW SP10 86,4
Error in line 22: rZMaJhW S210 263,5
Error in line 31: RioTlowfMH A48 16,5
Error in line 30: VvlxvZW S786 66,7
Error in line 32: RioTlowfMH S148 55,3
